css/style.css
/* Fonts
--------------------------------------------- */

@import url(http://fonts.googleapis.com/css?family=Roboto:100,300,300italic);

/* Main styles
--------------------------------------------- */

* {
	margin: 0px;
	padding: 0px;
}

body, html {
  font: 100%/1.5 'Roboto';
  font-weight: 300;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  color: #333333;
  background-color: #F6F6EF;
}

a {
	cursor: pointer;
}

/* Style classes
--------------------------------------------- */
.white-background {
	background-color: #F6F6EF;
}

.orange-background {
	background-color: #FDA942;
}

.white-color {
	color: #F6F6EF;
}

.grey-color {
	color: #333333;
}

/* Font size
--------------------------------------------- */

.regular-font {
	font-size: 16px;
}

.medium-font {
	font-size: 20px;
}

.large-font {
	font-size: 50px;
	font-weight: 100;
}

@media (min-width: 50rem) {
	.regular-font {
		font-size: 16px;	
	}

  .medium-font {
		font-size: 24px;
	}

	.large-font {
		font-size: 60px;
		font-weight: 100;
	}	
}

@media (min-width: 70rem) {
  .regular-font {
		font-size: 18px;
	}

  .medium-font {
		font-size: 32px;
	}

	.large-font {
		font-size: 80px;
		font-weight: 100;
	}		
}

/* Container
--------------------------------------------- */

.container {
	margin: auto;
	max-width: 48rem;
	width: 90%;
}

/* Section
--------------------------------------------- */

.section {
	text-align: center;
}

@media (min-width: 50rem) {
	.section {
		position: relative;
		height: 100vh;
		text-align: center;
	}

	.section.header {
		min-height: 540px;
	}

	.section.walkthrough {
		min-height: 680px;
	}

	.section.faq {
		height: auto;
	}

	.section.footer {
		height: auto;
	}
}

/* Grid
--------------------------------------------- */
.column {
	
}

.column.walkthrough { position: relative; min-height: 640px; padding: 20px 0px;}
.column.matchmade { background-color: #F6F6EF; }

@media (min-width: 50rem) {
	.column {
		float: left;
		height: 100vh;
		min-height: 540px;
	  margin: 0;
	}

	.column.full { width: 100%; }
	.column.two-thirds { width: 66.7%; }
	.column.three-fifths { width: 60%; }
	.column.half { width: 50%; }
	.column.two-fifths { width: 40%; }
	.column.third { width: 33.3%; }
	.column.fourth { width: 25%; }
	.column.flow-opposite { float: right; }
	.column.walkthrough { position: relative; min-height: 680px; padding: 0px;}
	.column.matchmade { background-color: #FDA942; }
}

/* Title text
--------------------------------------------- */

.title {
	display: inline-block;
	height: 60px;
	margin-top: 40px;
}

.title-logo {
	max-height: 100%;
	float: left;
}

.title-text {
	float: left;
	margin-left: 10px;
	line-height: 60px;
}

.tag {
	margin-top: 10px;
}

.badge-web {
	display: none;
}

.badge-mobile {
	display: block;
	margin: 40px 0px;
}

#scroller {
	display: none;
}

.next {
	margin: 10px 0;
}

@media (min-width: 50rem) {

	.container-title-text {
		text-align: center;
		position: relative;
	}

	.wrapper {
		position: absolute;
		max-width: 560px;
		max-height: 540px;
		top: 0;
		right: 0;
		left: 0;
		bottom: 0;
		margin: auto;
	}

	.title {
		display: inline-block;
		height: 60px;
	}

	.title-logo {
		max-height: 100%;
		float: left;
	}

	.title-text {
		float: left;
		margin-left: 10px;
		line-height: 60px;
	}

	.tag {
		margin-top: 20px;
	}

	.badge-web {
		padding-top: 20px;
		display: block;
	}

	.badge-mobile {
		display: none;
	}

	.next {
		position: relative;
		margin-top: 20px;
	}

	#scroller {
		display: block;
	}

	.walkthrough-tag {
		position: absolute;
		top: 0; left: 0; bottom: 0; right: 0;
	}

	.icon-web {
		fill: #333333;

		-webkit-transition: all .5s;
    -moz-transition: all .5s;
    transition: all .5s;
	}

	.icon-web:hover {
		fill: #FDA942;
	}
}

/* Title mockup
--------------------------------------------- */

.container-title-mockup {
}

.title-mockup {
	height: 80vh;
	min-height: 500px;
	margin: 10px 0;
	vertical-align: middle;
}

@media (min-width: 50rem) {
	.container-title-mockup {
		line-height: 100vh;
		text-align: left;
	}

	.title-mockup {
	height: 80vh;
	min-height: 500px;
	margin: 20px 0;
	vertical-align: middle;
	}
}

/* How Going works
--------------------------------------------- */

.container-walkthrough {

}

.walkthrough-title {
	display: block;
	font-size: 45px;
	font-weight: 100;
}

.walkthrough-text {
	display: block;
	margin: 0 20px;
	font-size: 20px;
}

.walkthrough-mockup {
	position: absolute;
	display: block;
	height: 460px;
	bottom: 0;
	left: 0;
	right: 0;
	margin: auto;
}

.walkthrough-mockup.web {
	display: none;
}

.walkthrough-mockup.mobile {
	display: block;
}

@media (min-width: 35rem) {
	.container-walkthrough {

	}

	.walkthrough-title {
		display: block;
		font-size: 45px;
		font-weight: 100;
	}

	.walkthrough-text {
		display: block;
		margin: 0px 60px;
		font-size: 22px;
	}

	.walkthrough-mockup {
		position: absolute;
		display: block;
		height: 460px;
		bottom: 0;
		left: 0;
		right: 0;
		margin: auto;
	}

	.walkthrough-mockup.web {
		display: none;
	}

	.walkthrough-mockup.mobile {
		display: block;
	}
}


@media (min-width: 50rem) {
	.container-walkthrough {
		position: relative;
		min-height: 680px;
	}

	.walkthrough-title {
		display: block;
		margin-top: 20px;
	}

	.walkthrough-text {
		display: block;
		margin: 0px 40px;
		font-size: 14px;
	}

	.walkthrough-mockup {
		position: absolute;
		display: block;
		height: 460px;
		bottom: 0;
		left: 0;
		right: 0;
		margin: auto;
	}

	.walkthrough-mockup.web {
		display: block;
	}

	.walkthrough-mockup.mobile {
		display: none;
	}
}

@media (min-width: 70rem) {
	.walkthrough-mockup {
		position: absolute;
		display: block;
		height: 480px;
		bottom: 0;
		left: 0;
		right: 0;
		margin: auto;
	}

	.walkthrough-mockup.web {
		display: block;
	}

	.walkthrough-mockup.mobile {
		display: none;
	}

	.walkthrough-text {
		display: block;
		margin: 0px 40px;
		font-size: 16px;
	}
}

/* FRAQ
--------------------------------------------- */

.container-faq {
	text-align: left;
	width: 90%;
	margin: 0 auto;
	padding: 20px 0;
}

.faq-title {
	text-align: center;
	font-size: 45px;
	margin-bottom: 20px;
}

.qa {
	margin-bottom: 10px;
}

.question {
	font-style: italic;
	font-size: 18px;
}

.answer {
	
}

@media (min-width: 50rem) {
	.container-faq {
	text-align: left;
	width: 90%;
	margin: 0 auto;
	padding: 20px 0;
	}

	.faq-title {
		text-align: center;
		font-size: 45px;
		margin-bottom: 20px;
	}

	.qa {
		margin-bottom: 10px;
	}

	.question {
		font-style: italic;
		font-size: 20px;
	}

	.answer {
		
	}
}

@media (min-width: 70rem) {
	.question {
		font-style: italic;
		font-size: 22px;
	}
}

/* FRAQ
--------------------------------------------- */

.container-footer {
	padding: 20px 0;
}

.getgoing {
	font-size: 45px;
	font-weight: 100;
}

.badge {
	margin: 20px 0;
}

.copyright {
	margin: 20px 0;
}

